@@ -6,7 +6,8 @@ cm4all-beng-proxy (0.3.1) unstable; urgency=low
   * fork: retry splice() after EAGAIN
   * fork: don't close input when splice() fails
   * cgi: abort the response handler when the stdin stream fails
-  * istream_file, istream_pipe, fork: fixed file descriptor leaks
+  * istream_file, istream_pipe, fork, client_socket: fixed file descriptor
+    leaks
 
  --
 
